# robot

./: .gitignore  CAMERA_TEST_README.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SETUP.md  SYSTEM_STATUS.md  depth_service.py  run_camera_test.sh  run_depth_test.sh  setup_depth_pro.sh
archive/hardware/robot-dongle/Robotic Arm Project/arduino code/: Servocamera.ino
archive/hardware/robot-dongle/sketch_nov16b/: sketch_nov16b.ino
arduino/servo_controller/: servo_controller.ino
config/: default.toml  vision_control.toml
docs/: ai-integration.md  camera-test.md  depth-estimation.md  extending.md  getting-started.md  vision-emg-integration.md
docs/archive/: LLM_INTEGRATION_README.md
examples/: basic_control.rs  config_example.rs  grasp_patterns.rs  vision_emg_demo.rs
examples_archive/: camera_test.rs  llm_robot_test.rs  tracking_output_test.rs
robot-dongle/: Humerus.stl  Radius.stl
robot-dongle/Music/: Sword.3mf
robot-dongle/Robotic Arm Project/B/: Arm 1.0.3mf  Hand 1.0.3mf
robot-dongle/Robotic Arm Project/C/: Arm and Hand.3mf
robot-dongle/Robotic Arm Project/python code/: y.py
robot-dongle/Servo__code_0-180_4_fingers/: Servo__code_0-180_4_fingers.ino
robot-dongle/Servo_python_elbow_to_finger_code/: Servo_python_elbow_to_finger_code.ino
scripts/: convert_hand_model.py  convert_to_onnx.sh  run_tracking_test.sh  warmup_depth.sh
src/: error.rs  lib.rs  main.rs
src/config/: config.rs  mod.rs
src/control/: controller.rs  llm_planner.rs  llm_vision_controller.rs  mod.rs  motion.rs  pickup_sequence.rs  vision_controller.rs
src/emg/: mod.rs
src/hand/: finger.rs  hand.rs  mod.rs  wrist.rs
src/hardware/: controller.rs  mod.rs  motor.rs  servo.rs  servo_map.rs
src/kinematics/: forward.rs  inverse.rs  mod.rs  types.rs
src/platform/: i2c.rs  mock.rs  mod.rs  pwm.rs
src/protocol/: mod.rs  serial_text.rs
src/vision/: cleanup.rs  depth_pro.rs  grip_patterns.rs  hand_tracker.rs  mod.rs
tests/: integration_test.rs
