[package]
name = "robot-hand"
version = "0.1.0"
edition = "2021"
default-run = "robot"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"

serialport = { version = "4.3", optional = true }
embedded-hal = { version = "1.0", optional = true }
linux-embedded-hal = { version = "0.4", optional = true }
rppal = { version = "0.18", optional = true }
opencv = { version = "0.97", optional = true, default-features = false, features = ["videoio", "highgui", "imgproc", "imgcodecs"] }
ort = { version = "2.0.0-rc.10", optional = true }
ndarray = { version = "0.16", optional = true }
serde_json = "1.0"
async-openai = "0.24"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["mock"]
mock = []
serial = ["dep:serialport"]
linux-pwm = ["dep:linux-embedded-hal"]
embedded = ["dep:embedded-hal"]
raspberry-pi = ["dep:rppal", "linux-pwm"]
opencv = ["dep:opencv", "dep:ort", "dep:ndarray"]

[[bin]]
name = "robot"
path = "src/main.rs"

[[bin]]
name = "simple_control"
path = "src/bin/simple_control.rs"
required-features = ["serial"]

[[bin]]
name = "test_serial"
path = "src/bin/test_serial.rs"
required-features = ["serial"]

[dev-dependencies]
